--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -54,7 +54,7 @@
  signoria:0 "シニョリーア制"
  signoria_desc:0 "共和国はある政治家の一族に支配されているが、優れた統治者である彼らの手によって国政はきわめて円滑に行われている。君主制と大差がないという言説もあるが、そうした言説は何の意味も持たない。"
  savonarola_dead_tt:0 "サヴォナローラが[Root.GetName]の支配者ではない"
- had_disaster_for_6_months:0 "国難は6ヵ月間有効です。"
+ had_disaster_for_6_months:0 "国難が6ヵ月間継続している"
  bonfire_of_the_vanities_disaster:0 "虚栄の焼却"
  bonfire_of_the_vanities_disaster_desc:0 "過激な聖職者がフィレンツェの権力を掌握しつつある。そして、彼は我々の美しい街を政治的、そして宗教的に危険な道へと導こうとしている。"
  flavor_tus.17.t:0 "[Root.GetName]における秩序の回復"
@@ -1350,7 +1350,7 @@
  country_estate_maratha_name:0 "[This.GetMarathasName]"
  MODIFIER_MAX_REVOLUTIONARY_ZEAL:0 "最大の革命熱"
  MODIFIER_YEARLY_REVOLUTIONARY_ZEAL:0 "年間革命熱"
- had_disaster_for_x_years_dutch:0 "国難は少なくとも§Y20§!年間有効です。"
+ had_disaster_for_x_years_dutch:0 "国難が少なくとも§Y20§!年間継続している"
  flavor_hun.201.name:0 "ラディスラウス・ポストゥムスの死"
  flavor_hun.201.d.king_no_heir:0 "我々の最愛の王、ラディスラウス・ポストゥムスは不審な状況下で急死した。彼が彼の支配下でオーストリアとハンガリーを統一する準備を整え、ハンガリーを外国の支配下で従属させていたことは、不正であるという主張をなおさら可能性の高いものにしている。貴族たちはすでに彼を偉大なヴォイヴォダ、フニャディ・ヤーノシュの息子で、彼らのお気に入りであるフニャディ・マーチャーシュに置き換え、ハンガリーの王位継承におけるハプスブルクの家系を断ち切ろうと動いている。しかし、ハプスブルク家との良好な関係を維持することを望む人々もおり、彼らはオーストリアの[HAB.Monarch.GetTitle][HAB.Monarch.GetName]がラディスラウスの正当な後継者であるべきだと主張している。"
  flavor_hun.201.d.king:0 "我々の最愛の王、ラディスラウス・ポストゥムスは不審な状況下で急死した。彼が彼の支配下でオーストリアとハンガリーを統一する準備を整え、ハンガリーを外国の支配下で従属させていたことは、不正であるという主張をなおさら可能性の高いものにしている。今、その継承の系統は断ち切られており、[Root.Heir.GetTitle][Root.Heir.GetName]は彼をハンガリーの支配者として引き継ぐだろう。"
