--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -4564,7 +4564,7 @@
  flavor_kor.6.d:0 "司法制度に干渉しないほうがいい。"
  japan.1.db:0 "京都の陥落により[new_shogunate.GetName]は天皇を解放し、幕府による統治を回復した。天皇陛下万歳！"
  japan.1.dc:0 "京都の陥落により、天皇はもはや[From.GetName]幕府によって保護されなくなった。幕府の全ての機能は失われ、大名はもはや元将軍の要望を聞き入れないだろう。"
- had_disaster_for_five_years:0 "国難は少なくとも§Y5§!年間有効です。"
+ had_disaster_for_five_years:0 "国難が少なくとも§Y5§!年間継続している"
  force_janissaries_to_undergo_yoklama:0 "§Yイェニチェリ軍は検査を受ける§!の決断を利用する。"
  flavor_daimyo.1.t:0 "長宗我部氏の台頭"
  flavor_daimyo.1.d:0 "土佐国が再び我々の直接の支配下に戻ったとき、いくつかの地元の大名が我々に近づき、我々に代わってその地域の領土を引き継ぐことを請願した。長宗我部氏は中国の最初の皇帝の子孫であると主張し、以前の君主の軍事的に強い支配によって知られるようになった。[Root.GetName]幕府の臣下として、彼らは四国に対する我々の利益のための忠実な力となることを約束している。"
