--- a/source/localisation/policies_l_english.yml
+++ b/source/localisation/policies_l_english.yml
@@ -416,4 +416,4 @@
  desc_render_unto_caesar_policy:0 "神から与えられしものは神へ返さねばならず、我々が他者へ与えしものは彼らが我々に返さねばならない。自国の世界への拡張は、啓蒙の贈り物だ。"
  canoe_expertise_policy:0 "カヌー技術"
  desc_canoe_expertise_policy:0 "我が民族は、昔からカヌーと共に歩んできた長い歴史を持ち、カヌーの操縦法を身につけ、その技術は並外れている。自国の船乗りは、カヌーの技能をさらに大きな船舶の操縦にも生かすことができる。"
- desc_war_horses_policy:1 "We protect our horses as much as we protect ourselves. Their speed and endurance have helped us on numerous occasions and are the reason why our ambitions of expansion can reach almost impossible limits. What a simple man travels in one week, we raze in one day."
+ desc_war_horses_policy:1 "我々は、己を守るのと同じように、馬を守る。馬の速度・持久力は、我々を幾度となく助け、拡大志向がほとんど不可能なとこにさえ達する理由でもある。人が一週間かけて移動するものを、我々は一日で破壊する。"
